<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MeshDisplayClient</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <!-- General Strings -->
    <string name="general_back_button_label">back</string>
    
    <!-- Main menu strings -->
    <string name="enter_event_button_label">Enter Event Manually</string>
    <string name="pref_button_label">Preferences</string>
    <string name="about_button_label">About</string>
    <string name="main_menu_text_box_title">Main Menu</string>
    <string name="main_menu_picture_alt">Image Unavailable</string>
    
    <!-- About Mesh Display Activity strings -->
    <string name="about_mesh_display_title">About Mesh Display</string>
    <string name="about_mesh_display_back_button_label">Back</string>
    <string name="about_mesh_display_text">
        Mesh Display allows multiple phones to be combined
		to create dynamic displays.\n\nThis app is a Mesh Display Client. Once a mesh 
		display event has been created, by 
		a Mesh Display Controller, you can enter it with this client app simply
		by entering your event id and client id.\n\nNote that this app requires the server 
		to be set up - please contact us on +353 87 7784955 to set this for you if you are
		testing this app
	</string>
    
    <!-- Enter event manually Activity strings -->
    <string name="enter_event_manaully_text_box_title">Enter Event Details</string>
    <string name="enter_event_manaully_join_button_label">Join</string>
    <string name="enter_event_manaully_back_button_label">back</string>
    <string name="enter_event_manaully_event_id_hint">Event Id (max 10 characters)</string>
    <string name="enter_event_manaully_client_id_hint">Client Id (max 7 characters)</string>
    
    <!-- Scan event entry Activity strings -->
    <string name="scanEventEntry_title">Scan Your Event Details</string>
    <string name="scan_event_entry_back_button_label">Back</string>
    <string name="scan_event_entry_scan_button_label">Scan</string>
    
    <!-- JoinEventWithScannedDetailsActivity Deatils -->
    <string name="scanned_join_title">Join With Scanned Details</string>
    <string name="scanned_event_entry_join_button_label">Join</string>
    <string name="scanned_event_entry_back_button_label">Back</string>
    
    <!-- Live mesh Display Activity Strings -->
    <string name="live_mesh_display_back_button_label">Back</string>
    <string name="live_mesh_display_event_info_button_label">Info</string>
    
    <!-- EventInfoActivity Strings -->
    <string name="event_info_title">Event Info</string>
    <string name="event_id_label">Event ID:</string>
    <string name="client_id_label">Client ID:</string>
    <string name="latitude_id_label">Latitude:</string>
    <string name="longitude_id_label">Longitude:</string>
    
    <!-- Preferences activity strings -->
    <string name="preferences_text_box_title">Preferences</string>
    <string name="base_server_url_hint">Enter Server URL</string>
    <string name="save_preferences_button_label">Save</string>
    <string name="pref_server_url_title">Server URL</string>
    <string name="pref_server_url_edittext_title">Mesh Display Controller URL</string>
    <string name="pref_server_url_edittext_summary">Enter the server URL</string>
    <string name="pref_header_summary">The URL of the Mesh Display Server</string>
    
    <!-- User messages from activities -->
    <string name="connection_problem">There was a problem with the connection</string>

</resources>