<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:background="@android:color/darker_gray"
    android:paddingTop="@dimen/activity_vertical_margin">
    
   <TextView
       android:id="@+id/aboutMeshDisplayTitle"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_centerHorizontal="true"
       android:text="@string/about_mesh_display_title"
       android:textAppearance="?android:attr/textAppearanceLarge" />
   
   <TextView
       android:id="@+id/aboutMeshDisplayText"
       android:layout_below="@+id/aboutMeshDisplayTitle"
       android:layout_above="@+id/buttonArea"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_centerHorizontal="true"
       android:layout_marginTop="30dp"
       android:textSize="16sp"
       android:text="@string/about_mesh_display_text"
       android:textAppearance="?android:attr/textAppearanceLarge" />
	
	<LinearLayout
	    android:id="@+id/buttonArea"
	    android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
	    android:orientation="vertical"
	    >
    
	    <Button
	        android:id="@+id/aboutMeshDisplayBackButton"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:text="@string/about_mesh_display_back_button_label" />
	    
    </LinearLayout>

</RelativeLayout>