<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">
    
   <TextView
       android:id="@+id/scanEventEntryTitle"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_centerHorizontal="true"
       android:text="@string/scanEventEntry_title"
       android:textAppearance="?android:attr/textAppearanceLarge" />
   
   <TextView
       android:id="@+id/scanEventEntryText"
       android:layout_below="@+id/scanEventEntryTitle"
       android:layout_above="@+id/buttonArea"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_centerHorizontal="true"
       android:textAppearance="?android:attr/textAppearanceLarge" />
	
	<LinearLayout
	    android:id="@+id/buttonArea"
	    android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
	    android:orientation="vertical"
	    >
    
	    <Button
	        android:id="@+id/scanEventEntryScanButton"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:text="@string/scan_event_entry_scan_button_label" />
	  
	    <Button
	        android:id="@+id/scanEventEntryBackButton"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:text="@string/scan_event_entry_back_button_label" />
	    
    </LinearLayout>

</RelativeLayout>