<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >
    
   <TextView
       android:id="@+id/scannedJoinTitle"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_centerHorizontal="true"
       android:text="@string/scanned_join_title"
       android:textAppearance="?android:attr/textAppearanceLarge" />
   
   	<EditText
   	    android:id="@+id/scannedJoinEventEditText"
   	    android:layout_width="match_parent"
   	    android:layout_height="50dp"
   	    android:layout_below="@+id/scannedJoinTitle"
   	    android:layout_marginTop="19dp"
   	    android:clickable="false" 
        android:cursorVisible="false" 
        android:focusable="false" 
        android:focusableInTouchMode="false"
   	    android:ems="10" >
	</EditText>
	
   	<EditText
   	    android:id="@+id/scannedJoinClientEditText"
   	    android:layout_width="match_parent"
   	    android:layout_height="50dp"
   	    android:layout_below="@+id/scannedJoinEventEditText"
   	    android:layout_marginTop="19dp"
   	    android:clickable="false" 
        android:cursorVisible="false" 
        android:focusable="false" 
        android:focusableInTouchMode="false"
   	    android:ems="10" >
	</EditText>
	
	<LinearLayout
	    android:id="@+id/buttonArea"
	    android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
	    android:orientation="vertical"
	    >
  
	   	<Button
	   	    android:id="@+id/scannedJoinButton"
	   	    android:layout_width="match_parent"
	   	    android:layout_height="wrap_content"
	   	    android:layout_gravity="center"
	   	    android:text="@string/scanned_event_entry_join_button_label" />
	   	
	  	<Button
	        android:id="@+id/scannedBackButton"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:layout_weight="1"
	        android:text="@string/scanned_event_entry_back_button_label" />
    
    </LinearLayout>



</RelativeLayout>